<resources>
    <string name="app_name">Android Learner</string>
    <string name="button_label_toast">Toast</string>
    <string name="count_initial_value">0</string>
    <string name="button_label_count">Count</string>
    <string name="toast_message">Hello Toast</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="calculator_button">calculator</string>
    <string name="add_button">add</string>
    <string name="sub_button">sub</string>
    <string name="mul_button">mul</string>
    <string name="div_button">div</string>
    <string name="first_number_editText">Enter the first number</string>
    <string name="second_number_editText">Enter the second number</string>
    <string name="computationError">Error</string>
    <string name="ui_button">User Input Control</string>
    <string name="ui_show_button">show</string>
    <string name="ui_password_editText">Enter your password</string>
    <string name="ui_email_editText">Enter Your Email</string>
    <string name="ui_phone_editText">Enter Phone No.</string>
    <string name="ui_phoneLabelTitle_textView">Phone Number:</string>
    <string name="ui_nothingEntered_textView">Nothing entered</string>
    <string name="ui_alert_button">Alert</string>
    <string name="ui_alert_textView">Tap to test the alert</string>
    <string name="ui_OnClickListener_button">On Click Listener</string>
    <string name="ui_alert_message">Click OK to continue, or Cancel to stop:</string>
    <string name="ui_date_button">Date</string>
    <string name="ui_time_button">Time</string>
    <string name="ui_dateAndTime_message">Choose the date and time</string>
    <string name="ui_date_picker">datePicker</string>
    <string name="ui_time_picker">timePicker</string>
    <string-array name="ui_spinner_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_images_button">**********\n\nA portal to Images\n\n**********</string>
    <string name="title_activity_images">ImagesActivity</string>
    <string name="droid_Desserts_TextView">Droid Desserts</string>
    <string name="choose_dessert_TextView">Choose a dessert</string>
    <string name="donut_ImageView">Donuts are gazed and sprinkled with candy</string>
    <string name="ice_cream_ImageView">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_ImageView">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="delivery_method_TextView">Choose a delivery method</string>
    <string name="same_day_radioButton">Same day messenger service</string>
    <string name="next_day_radioButton">Next day ground delivery</string>
    <string name="pick_up_radioButton">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked</string>
    <string name="action_settings">settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_settings_message">You selected Settings</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_log_out_message">You selected Log Out</string>
    <string name="google_hq">geo:37.422114,-122.086744?z=12</string>
    <string name="article_title_textView">Beatles Anthology Vol. 1</string>
    <string name="article_subtitle_textView">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_textView">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
\n\n
This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on the bootleg <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
\n\n
<b>Highlights include:</b>
\n\n
<b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the bootleg road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
\n\n
<b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
\n\n
<b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on bootlegs featuring the Dead joined by the Beach Boys!
\n\n
<b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
\n\n
<b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
\n\n
<b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
\n\n
<b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
</string>
    <string name="comment">Add Comment</string>
    <string name="scrollView_button">Scroll View</string>
    <string name="tabNavigation_button">Tab Navigation</string>
    <string name="tab_1">These are the top stories:</string>
    <string name="tab_2">These are the tech news:</string>
    <string name="tab_3">These are the cooking stories:</string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>
    <string name="action_log_out">Log Out</string>
    <string name="navigation_header_textView">My Navigation Bar</string>
    <string name="import_camera">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawerLayout_open">Open navigation drawer</string>
    <string name="navigation_drawerLayout_close">Close navigation drawer</string>
    <string name="chose_camera">You chose Camera Import.</string>
    <string name="chose_gallery">You chose the Gallery.</string>
    <string name="chose_slideshow">You chose the Slideshow.</string>
    <string name="chose_tools">You chose Tools.</string>
    <string name="chose_share">You chose Share.</string>
    <string name="chose_send">You chose Send.</string>
    <string name="recyclerView_button">Recycler View</string>
    <string name="initital_count">0</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="theme_style_button">Theme and Styles</string>
    <string name="item">ITEM</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="material_me_button">Material Me</string>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>
</resources>