<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        android:icon="@drawable/ic_status_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="30"
        android:icon="@drawable/ic_log_out_white"
        android:title="@string/action_log_out"
        app:showAsAction="ifRoom"/>

</menu>