<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_main"
        android:onClick="launchSecondActivity"/>

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/button_main"
        android:layout_toLeftOf="@+id/button_main"
        android:ems="10"
        android:hint="@string/editText_main"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/text_header_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header_reply"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_main"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/open_website_button"
        android:layout_toLeftOf="@+id/open_website_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_uri" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_main"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="openWebsite"
        android:text="@string/button_uri" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/website_edittext"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/open_location_button"
        android:layout_toLeftOf="@+id/open_location_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_loc" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/open_website_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_loc"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/location_edittext"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/share_text_button"
        android:layout_toLeftOf="@+id/share_text_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/button_share" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/open_location_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_share"
        android:onClick="shareText"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="@dimen/activity_margin"
        android:layout_above="@id/share_text_button">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/tabNavigation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tabNavigation_button"
                android:onClick="launchTabNavigationActivity"/>
            <Button
                android:id="@+id/scrollView_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scrollView_button"
                android:onClick="launchScrollActivity"/>

            <Button
                android:id="@+id/ui_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_button"
                android:onClick="launchUserInputActivity"/>

            <Button
                android:id="@+id/calculator_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculator_button"
                android:onClick="launchCalculatorActivity"/>

            <Button
                android:id="@+id/recyclerView_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recyclerView_button"
                android:onClick="launchRecyclerViewActivity"/>

            <Button
                android:id="@+id/theme_style_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_style_button"
                android:onClick="launchStyleThemeActivity"/>
            <Button
                android:id="@+id/material_me_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_me_button"
                android:onClick="launchMaterialMeActivity"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>